--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/tic-tac-toe.png" />
+    <link rel="apple-touch-icon" href="/tic-tac-toe.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ia04-react-tutorial</title>
+    <meta
+      name="description"
+      content="Play Tic-Tac-Toe game built with React and TypeScript"
+    />
+    <title>Tic-Tac-Toe Game</title>
   </head>
   <body>
     <div id="root"></div>
